@@ -84,3 +84,9 @@
 
         * size_min_restricted_calc: Fixed textblock handling.
 
+2011-05-15  Tom Hacohen (TAsn)
+
+	 * Entry - New API: added edje_object_part_text_append which appends
+	   text to the end of the textblock part. This lets us do cool thing
+	   like population of textblock using idler.
+
